
	* scm/define-context-properties.scm
	(all-user-translation-properties): add stringFingerOrientations

2006-10-11  Jürgen Reuter  <reuter@ipd.uka.de>

	* mf/parmesan-dots.mf (new), mf/parmesan-generic.mf,
	ly/engraver-init.ly: Added vaticana-style augmentum dot glyph.

	* lily/dots.cc: Added style property for dots.

	* mf/parmesan-heads.mf: Fix typo in comment.

2006-10-10  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/output-lib.scm (fingering::calc-text): use origin
	event-property, not music-property.

	* lily/lilypond.rc.in: spell my name correctly.

2006-10-10  Joe Neeman  <joeneeman@gmail.com>

	* lily/grob.cc (pure_height): only add minimum-Y-extent if we
	already have a non-empty extent. Fixes estimation for Hara-kiri
	staves.

2006-10-09  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/gregorian-init.ly: Simplify definition of \episemInitium and
	\episemFinis.

	* lily/ligature-engraver.cc: Remove unused #include.

	* lily/vaticana-ligature-engraver.cc: Fix placement of dots.
	Bugfix: remove method check_for_prefix_loss(Item *) from global
	namespace to avoid namespace pollution.

2006-10-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION: release 2.9.22

	* ly/generate-documentation.ly: update option name.

	* lily/dynamic-text-spanner.cc (print): revert fix.

	* scm/define-grob-interfaces.scm
	(trill-pitch-accidental-interface):
	add trill-pitch-accidental-interface

	* lily/dots-engraver.cc (acknowledge_rhythmic_head): only
	dereference if it's really a duration.

	* lily/figured-bass-engraver.cc (process_music): clear spanner if
	useBassFigureExtenders is not set.
	(listen_bass_figure): record as new event if
	useBassFigureExtenders not set. Fixes #103.

	* scm/stencil.scm (circle-stencil): don't center stencil argument,
	instead: move circle. Fixes #107.

	* scm/define-grobs.scm (all-grob-descriptions): set
	allow-loose-spacing for PaperColumn and
	NonMusicalPaperColumn. Kludge for #110.

	* lily/spaceable-grob.cc: add allow-loose-spacing property.